# pcb-parts-client

./: .gitignore  AGENTS.md  README.md  test.csv
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/assets/: Magnet Harvesting 1.2.csv  MagnetV1_2.SchDoc
crates/common/src/: export.rs  import.rs  lib.rs  models.rs  network.rs
crates/gui/: Cargo.toml
crates/gui/assets/: default.conf  dev.conf
crates/gui/src/: app.rs  icons.rs  keymap.rs  main.rs
crates/gui/src/bom_importer/: mod.rs  widget.rs
crates/gui/src/grid/: mod.rs  widget.rs
crates/gui/src/purchase_planner/: mod.rs  widget.rs
crates/gui/src/search/: mod.rs  widget.rs
crates/gui/src/settings/: keymap.rs  mod.rs
gridfinity_models/: gf-rebuilt-bin-1x1.stl  gf_4_bins_pla.gcode.3mf
