[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
altium-format = "0.1.7"
anyhow = "1.0.98"
csv = "1.3.1"
encoding_rs = "0.8.35"
futures = "0.3.31"
pretty_assertions = "1.4.1"
reqwest = { version="0.12.15", features = ["json", "cookies"] }
reqwest_cookie_store = "0.8.0"
serde = { version="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tabled = "0.18.0"
tokio = { version="1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
url = "2.5.4"
