[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
common = {path="../common"}
iced = { version = "0.13.1", features = ["tokio"] }
iced_fonts = "0.2.1"
keybinds = { version = "0.1.1", features = ["iced", "serde"] }
logos = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
