[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.37", features = ["derive"] }
common = {path="../common"}
iced = { git = "https://github.com/iced-rs/iced.git", rev="7c5a4bc", version = "0.14.0-dev", features = ["tokio", "svg"] }
keybinds = { git = "https://github.com/vincent-uden/keybinds-rs.git", version = "0.1.1", features = ["iced", "serde"] }
lazy_static = "1.5.0"
logos = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
